fixed div overflow

--- a/Scripts/CSS/style.css
+++ b/Scripts/CSS/style.css
@@ -86,9 +86,10 @@ select {
 }
 
 #waypoint-edit {
-  position: relative;
-  left: 1100px;
-  top: 40px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(100%);
+  top: 110px;
   border: 4px solid black;
   background-color: #233540;
   border-radius: 3%;
@@ -106,7 +107,9 @@ select {
   user-select: none;
   /* Standard */
 }
-
+#waypoint-edit input{
+  width: 70%;
+}
 #waypoint-edit-title {
   position: relative;
   top: -45px;
